--- a/src/main/resources/public/template/token/tokenList.html
+++ b/src/main/resources/public/template/token/tokenList.html
@@ -24,7 +24,7 @@
             <div class="document-row-info">
                 <div class="document-detail flex-row align-items-center float-right">
                     <div class="document-user inline-flex align-items-center justify-content-center">
-                        <img class="profile-photo" alt="profile pic" th:src="${token.avatarPath}">
+                        <img class="profile-photo mr-2" alt="profile pic" th:src="${token.avatarPath}" width="32" height="32">
                         <h5 class="user-name" th:text="${token.createUserName}"></h5>
                     </div>
                     <span class="vertical-bar"></span>
