--- a/src/main/resources/public/src/scss/template/_columns.scss
+++ b/src/main/resources/public/src/scss/template/_columns.scss
@@ -5,18 +5,18 @@
  * @author jy.lim
  * @version 1.0
  */
-.col-1 {width: $column-1;}
-.col-2 {width: $column-2;}
-.col-3 {width: $column-3;}
-.col-4 {width: $column-4;}
-.col-5 {width: $column-5;}
-.col-6 {width: $column-6;}
-.col-7 {width: $column-7;}
-.col-8 {width: $column-8;}
-.col-9 {width: $column-9;}
-.col-10 {width: $column-10;}
-.col-11 {width: $column-11;}
-.col-12 {width: $column-12;}
+.col-1 { width: $column-1; }
+.col-2 { width: $column-2; }
+.col-3 { width: $column-3; }
+.col-4 { width: $column-4; }
+.col-5 { width: $column-5; }
+.col-6 { width: $column-6; }
+.col-7 { width: $column-7; }
+.col-8 { width: $column-8; }
+.col-9 { width: $column-9; }
+.col-10 { width: $column-10; }
+.col-11 { width: $column-11; }
+.col-12 { width: $column-12; }
 
 // 고정 값이 아닌 %(퍼센트) 비율을 사용하는 경우, 아래 클래스를 사용한다.
 $i: 1;
@@ -26,3 +26,24 @@ $i: 1;
   }
   $i: $i + 1;
 }
+
+// padding
+.p-0 { padding: 0; }
+.pl-0 { padding-left: 0; }
+.pr-0 { padding-right: 0; }
+
+// margin
+.m-0 { margin: 0; }
+.ml-0 { margin-left: 0; }
+.ml-1 { margin-left: 0.3125rem; } // 5px
+.ml-2 { margin-left: 0.625rem; }  // 10px
+.ml-3 { margin-left: 0.9375rem; } // 15px
+.ml-4 { margin-left: 1.25rem; }   // 20px
+.ml-auto { margin-left: auto; }
+
+.mr-0 { margin-right: 0; }
+.mr-1 { margin-right: 0.3125rem; } // 5px
+.mr-2 { margin-right: 0.625rem; }  // 10px
+.mr-3 { margin-right: 0.9375rem; } // 15px
+.mr-4 { margin-right: 1.25rem; }   // 20px
+.mr-auto { margin-right: auto; }
