--- a/src/main/resources/public/template/document/documentAdminList.html
+++ b/src/main/resources/public/template/document/documentAdminList.html
@@ -7,43 +7,43 @@
 <body>
 <table class="list-table">
     <thead class="list-head">
-        <tr>
-            <th width="25%" th:text="#{workflowAdmin.label.name}"></th>
-            <th width="10%" th:text="#{workflowAdmin.label.type}"></th>
-            <th width="10%" th:text="#{workflowAdmin.label.group}"></th>
-            <th width="20%" th:text="#{workflowAdmin.label.description}"></th>
-            <th width="15%" th:text="#{workflowAdmin.label.status}"></th>
-            <th width="10%" th:text="#{common.label.edit}"></th>
-            <th width="10%" th:text="#{common.label.delete}"></th>
+        <tr class="flex-row align-items-center">
+            <th width="25%" class="align-left" th:text="#{workflowAdmin.label.name}"></th>
+            <th width="10%" class="align-left" th:text="#{workflowAdmin.label.type}"></th>
+            <th width="10%" class="align-left" th:text="#{workflowAdmin.label.group}"></th>
+            <th width="20%" class="align-left" th:text="#{workflowAdmin.label.description}"></th>
+            <th width="15%" class="align-left" th:text="#{workflowAdmin.label.status}"></th>
+            <th width="10%" class="align-left" th:text="#{common.label.edit}"></th>
+            <th width="10%" class="align-left" th:text="#{common.label.delete}"></th>
         </tr>
     </thead>
     <tbody class="list-body">
         <input type="hidden" id="totalCount" th:value="${documentCount}"/>
-        <tr class="no-data-found-list" th:if="${#arrays.isEmpty(documentList)}">
-            <td colspan="7" th:text="#{common.msg.noData}"></td>
+        <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(documentList)}">
+            <td colspan="7" class="align-center" th:text="#{common.msg.noData}"></td>
         </tr>
-        <tr th:unless="${#arrays.isEmpty(documentList)}" th:each="document: ${documentList}">
-            <td width="25%" >
+        <tr class="flex-row align-items-center" th:unless="${#arrays.isEmpty(documentList)}" th:each="document: ${documentList}">
+            <td width="25%" class="align-left">
                 <div class="document-color-circle" th:style="|background-color:${document.documentColor}|"></div>
                 <span th:text="${document.documentName}"></span>
             </td>
-            <td style="width: 10%;" th:if="${document.documentType} == 'application-form'" th:text="#{document.type.applicationForm}"></td>
-            <td style="width: 10%;" th:unless="${document.documentType} == 'application-form'" th:text="#{document.type.workflow}"></td>
-            <td style="width: 10%;">
+            <td style="width: 10%;" class="align-left" th:if="${document.documentType} == 'application-form'" th:text="#{document.type.applicationForm}"></td>
+            <td style="width: 10%;" class="align-left" th:unless="${document.documentType} == 'application-form'" th:text="#{document.type.workflow}"></td>
+            <td style="width: 10%;" class="align-left">
                 <th:block th:if="${document.documentGroup != null && document.documentGroup != ''}">
                     <th:block th:each="group, index : ${groupList}">
                         <label th:if="${group.code} == ${document.documentGroup}" th:text="${group.codeValue}"></label>
                     </th:block>
                 </th:block>
             </td>
-            <td style="width: 20%;" th:text="${document.documentDesc}"></td>
-            <td style="width: 15%;" th:text="#{${document.documentStatus}}"></td>
+            <td style="width: 20%;" class="align-left" th:text="${document.documentDesc}"></td>
+            <td style="width: 15%;" class="align-left" th:text="#{${document.documentStatus}}"></td>
             <td style="width: 10%;">
                 <button type="button" sec:authorize="hasAuthority('document.admin.update')" th:onclick="openDocumentEdit([[${document.documentId}]])">
                     <span class="icon-edit"></span>
                 </button>
             </td>
-            <td style="width: 10%;">
+            <td style="width: 10%;" class="align-left">
                 <button type="button" sec:authorize="hasAuthority('document.admin.delete')" th:onclick="deleteDocument([[${document.documentId}]])">
                     <span class="icon-delete"></span>
                 </button>
