--- a/src/main/resources/public/template/download/downloadList.html
+++ b/src/main/resources/public/template/download/downloadList.html
@@ -7,23 +7,23 @@
 <body>
     <table class="list-table">
         <thead class="list-head">
-            <tr>
-                <th style="width:5%;" th:text="#{download.label.seq}"></th>
-                <th style="width:10%;" th:text="#{download.label.category}"></th>
-                <th style="width:45%;" th:text="#{common.label.title}"></th>
-                <th style="width:10%;" th:text="#{common.label.writer}"></th>
-                <th style="width:20%;" th:text="#{common.label.writeDate}"></th>
-                <th style="width:10%;" th:text="#{download.label.views}"></th>
+            <tr class="flex-row align-items-center">
+                <th style="width:5%;" class="align-left" th:text="#{download.label.seq}"></th>
+                <th style="width:10%;" class="align-left" th:text="#{download.label.category}"></th>
+                <th style="width:45%;" class="align-left" th:text="#{common.label.title}"></th>
+                <th style="width:10%;" class="align-left" th:text="#{common.label.writer}"></th>
+                <th style="width:20%;" class="align-left" th:text="#{common.label.writeDate}"></th>
+                <th style="width:10%;" class="align-left" th:text="#{download.label.views}"></th>
             </tr>
         </thead>
         <tbody class="list-body">
             <input type="hidden" id="totalCount" name="totalCount" th:value="${downloadCount}"/>
-            <tr class="no-data-found-list" th:if="${#arrays.isEmpty(downloadList)}">
-                <td colspan="6" th:text="#{common.msg.noData}"></td>
+            <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(downloadList)}">
+                <td colspan="6" class="align-center" th:text="#{common.msg.noData}"></td>
             </tr>
-            <tr th:each="download : ${downloadList}">
-                <td style="width:5%;" th:text="|${download.downloadSeq}|"></td>
-                <td style="width:10%;" th:text="#{${download.downloadCategory}}"></td>
+            <tr class="flex-row align-items-center" th:each="download : ${downloadList}">
+                <td style="width:5%;" class="align-left" th:text="|${download.downloadSeq}|"></td>
+                <td style="width:10%;" class="align-left" th:text="#{${download.downloadCategory}}"></td>
                 <td style="width:45%;" class="align-left">
                     <a sec:authorize="!hasAuthority('download.update')" th:text="${download.downloadTitle}"
                        th:href="@{/downloads/{id}/view(id=${download.downloadId})}">
@@ -31,9 +31,9 @@
                     <a sec:authorize="hasAuthority('download.update')" th:text="${download.downloadTitle}"
                        th:href="@{/downloads/{id}/edit(id=${download.downloadId})}"></a>
                 </td>
-                <td style="width:10%;" th:text="${download.createUserName}"></td>
-                <td style="width:20%;" th:name="createDt" th:text="${download.createDt}"></td>
-                <td style="width:10%;" th:text="${download.views}"></td>
+                <td style="width:10%;" class="align-left" th:text="${download.createUserName}"></td>
+                <td style="width:20%;" class="align-left" th:name="createDt" th:text="${download.createDt}"></td>
+                <td style="width:10%;" class="align-left" th:text="${download.views}"></td>
             </tr>
         </tbody>
     </table>
