--- a/src/main/resources/public/template/faq/faqList.html
+++ b/src/main/resources/public/template/faq/faqList.html
@@ -7,26 +7,25 @@
 <body>
 <table class="list-table">
     <thead class="list-head">
-        <tr>
-            <th style="width:20%;" th:text="#{faq.label.category}"></th>
-            <th style="width:80%;" th:text="#{faq.label.title}"></th>
-        </tr>
+            <tr class="flex-row align-items-center">
+                <th style="width:20%;" class="align-left" th:text="#{faq.label.category}"></th>
+                <th style="width:80%;" class="align-left" th:text="#{faq.label.title}"></th>
+            </tr>
         </thead>
         <tbody class="list-body">
-        <input th:type="hidden" id="totalCount" name="totalCount" th:value="${faqCount}"/>
-        <tr class="no-data-found-list" th:if="${#arrays.isEmpty(faqs)}">
-            <td colspan="2" th:text="#{common.msg.noData}"></td>
-        </tr>
-        <tr th:each="faq : ${faqs}">
-            <td style="width:20%;" th:text="#{|common.code.${faq.faqGroup}|}">
-            </td>
-            <td style="width:80%;" class="align-left">
-                <a sec:authorize="hasAuthority('faq.update')" th:text="${faq.faqTitle}"
-                   th:href="@{/faqs/{faqId}/edit(faqId=${faq.faqId})}"></a>
-                <a sec:authorize="!hasAuthority('faq.update')" th:text="${faq.faqTitle}"
-                   th:href="@{/faqs/{faqId}/view(faqId=${faq.faqId})}"></a>
-            </td>
-        </tr>
+            <input th:type="hidden" id="totalCount" name="totalCount" th:value="${faqCount}"/>
+            <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(faqs)}">
+                <td colspan="2" class="align-center" th:text="#{common.msg.noData}"></td>
+            </tr>
+            <tr class="flex-row align-items-center" th:each="faq : ${faqs}">
+                <td style="width:20%;" class="align-left" th:text="#{|common.code.${faq.faqGroup}|}"></td>
+                <td style="width:80%;" class="align-left">
+                    <a sec:authorize="hasAuthority('faq.update')" th:text="${faq.faqTitle}"
+                       th:href="@{/faqs/{faqId}/edit(faqId=${faq.faqId})}"></a>
+                    <a sec:authorize="!hasAuthority('faq.update')" th:text="${faq.faqTitle}"
+                       th:href="@{/faqs/{faqId}/view(faqId=${faq.faqId})}"></a>
+                </td>
+            </tr>
         </tbody>
     </table>
 </body>
