--- a/src/main/resources/public/template/form/formList.html
+++ b/src/main/resources/public/template/form/formList.html
@@ -7,23 +7,23 @@
 <body>
     <table class="list-table">
         <thead class="list-head">
-            <tr>
-                <th width="20%" th:text="#{form.label.name}"></th>
-                <th width="10%" th:text="#{form.label.preview}" class="align-center"></th>
-                <th width="10%" th:text="#{common.label.update}" class="align-center"></th>
-                <th width="10%" th:text="#{form.label.state}" class="align-center"></th>
-                <th width="28%" th:text="#{form.label.description}"></th>
-                <th width="10%" th:text="#{common.label.writer}"></th>
-                <th width="12%" th:text="#{common.label.writeDate}"></th>
+            <tr class="flex-row align-items-center">
+                <th width="20%" class="align-left" th:text="#{form.label.name}"></th>
+                <th width="10%" class="align-center" th:text="#{form.label.preview}"></th>
+                <th width="10%" class="align-center" th:text="#{common.label.update}"></th>
+                <th width="10%" class="align-center" th:text="#{form.label.state}"></th>
+                <th width="28%" class="align-left" th:text="#{form.label.description}"></th>
+                <th width="10%" class="align-left" th:text="#{common.label.writer}"></th>
+                <th width="12%" class="align-left" th:text="#{common.label.writeDate}"></th>
             </tr>
         </thead>
         <tbody class="list-body">
             <input type="hidden" id="totalCount" th:value="${formListCount}"/>
-            <tr class="no-data-found-list" th:if="${#arrays.isEmpty(formList)}">
-                <td colspan="7" th:text="#{common.msg.noData}"></td>
+            <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(formList)}">
+                <td colspan="7" class="align-center" th:text="#{common.msg.noData}"></td>
             </tr>
-            <tr th:unless="${#arrays.isEmpty(formList)}" th:each="form: ${formList}">
-                <td width="20%">
+            <tr class="flex-row align-items-center" th:unless="${#arrays.isEmpty(formList)}" th:each="form: ${formList}">
+                <td width="20%" class="align-left">
                     <th:block th:if="${form.editable == true}">
                         <a sec:authorize="!hasAuthority('form.update')" th:text="${form.name}"
                            th:attr="onclick=|openFormEdit('${form.id}', true)|"></a>
@@ -47,10 +47,10 @@
                         </button>
                     </th:block>
                 </td>
-                <td width="10%" th:text="#{${form.status}}" class="align-center"></td>
-                <td width="28%" th:class="align-left" th:text="${form.desc}"></td>
-                <td width="10%" th:text="${form.createUserName}"></td>
-                <td width="12%" th:name="createDt" th:text="${form.createDt}"></td>
+                <td width="10%" class="align-center" th:text="#{${form.status}}"></td>
+                <td width="28%" class="align-left" th:text="${form.desc}"></td>
+                <td width="10%" class="align-left" th:text="${form.createUserName}"></td>
+                <td width="12%" class="align-left" th:name="createDt" th:text="${form.createDt}"></td>
             </tr>
         </tbody>
     </table>
