--- a/src/main/resources/public/template/process/processList.html
+++ b/src/main/resources/public/template/process/processList.html
@@ -7,23 +7,23 @@
 <body>
     <table class="list-table">
         <thead class="list-head">
-            <tr>
-                <th width="20%" th:text="#{process.label.name}"></th>
-                <th width="10%" th:text="#{process.label.simulation}" class="align-center"></th>
-                <th width="10%" th:text="#{common.label.update}" class="align-center"></th>
-                <th width="10%" th:text="#{process.label.state}" class="align-center"></th>
-                <th width="28%" th:text="#{process.label.description}"></th>
-                <th width="10%" th:text="#{common.label.writer}"></th>
-                <th width="12%" th:text="#{common.label.writeDate}"></th>
+            <tr class="flex-row align-items-center">
+                <th style="width: 20%" class="align-left" th:text="#{process.label.name}"></th>
+                <th style="width: 10%" class="align-center" th:text="#{process.label.simulation}"></th>
+                <th style="width: 10%" class="align-center" th:text="#{common.label.update}"></th>
+                <th style="width: 10%" class="align-center" th:text="#{process.label.state}"></th>
+                <th style="width: 28%" class="align-left" th:text="#{process.label.description}"></th>
+                <th style="width: 10%" class="align-left" th:text="#{common.label.writer}"></th>
+                <th style="width: 12%" class="align-left" th:text="#{common.label.writeDate}"></th>
             </tr>
         </thead>
         <tbody class="list-body">
         <input type="hidden" id="totalCount" th:value="${processListCount}"/>
-            <tr class="no-data-found-list" th:if="${#arrays.isEmpty(processList)}">
-                <td colspan="7" th:text="#{common.msg.noData}"></td>
+            <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(processList)}">
+                <td colspan="7" class="align-center" th:text="#{common.msg.noData}"></td>
             </tr>
-            <tr th:unless="${#arrays.isEmpty(processList)}" th:each="process: ${processList}">
-                <td width="20%">
+            <tr class="flex-row align-items-center" th:unless="${#arrays.isEmpty(processList)}" th:each="process: ${processList}">
+                <td style="width: 20%" class="align-left">
                     <th:block th:if="${process.enabled == true}">
                         <a sec:authorize="!hasAuthority('process.update')" th:text="${process.name}"
                            th:attr="onclick=|openProcessEdit('${process.id}', true)|"></a>
@@ -34,12 +34,12 @@
                         <span th:text="${process.name}"></span>
                     </div>
                 </td>
-                <td width="10%" class="align-center">
+                <td style="width: 10%" class="align-center">
                     <button type="button" class="default-fill btn-popup" th:onclick="openProcessDesignerView([[${process.id}]])">
                         <span class="icon-search"></span>
                     </button>
                 </td>
-                <td width="10%" class="align-center">
+                <td style="width: 10%" class="align-center">
                     <th:block th:if="${process.enabled == true}">
                         <button type="button" sec:authorize="hasAuthority('process.update')"
                                 th:onclick="openProcessDesignerEdit([[${process.id}]])">
@@ -47,10 +47,10 @@
                         </button>
                     </th:block>
                 </td>
-                <td width="10%" th:text="#{${process.status}}" class="align-center"></td>
-                <td width="28%" class="align-left" th:text="${process.description}"></td>
-                <td width="10%" th:text="${process.createUserName}"></td>
-                <td width="12%" th:name="createDt" th:text="${process.createDt}"></td>
+                <td style="width: 10%" class="align-center" th:text="#{${process.status}}"></td>
+                <td style="width: 28%" class="align-left" th:text="${process.description}"></td>
+                <td style="width: 10%" class="align-left" th:text="${process.createUserName}"></td>
+                <td style="width: 12%" class="align-left" th:name="createDt" th:text="${process.createDt}"></td>
             </tr>
         </tbody>
     </table>
